<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.paucadens.robosapiens.Movimentacc">

    <TextView
        android:text="@string/estat_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/estats">
    </TextView>

    <Button
        android:text="@string/calibrar_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calibrar"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true">
    </Button>

    <Button
        android:text="@string/start_acc_text"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/stop_acc"
        android:background="@drawable/cercle_verd"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/calibrar"
        android:layout_centerHorizontal="true">
    </Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tornarenradere"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/stop_acc"
        android:layout_centerHorizontal="true">
        <!--android:background="?attr/actionModeCloseDrawable"-->
    </Button>

</RelativeLayout>
