<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.paucadens.robosapiens.Connexio">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:ignore="UselessParent">

        <TextView
            android:text="@string/connectar_bluetooth_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@android:color/black">
        </TextView>

        <Button
            android:text="@string/emparellats_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emparellats"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
        </Button>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/llistadisp"
            android:layout_below="@+id/emparellats">
        </ListView>

        <Button
            android:text="@string/buscar_dispositius_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buscardisp"
            android:layout_below="@+id/textView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">
        </Button>
    </RelativeLayout>
</RelativeLayout>
